--- a/AgentAppFront/src/app/components/userComponent/agent/agent.component.html
+++ b/AgentAppFront/src/app/components/userComponent/agent/agent.component.html
@@ -7,6 +7,7 @@
       <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
       <a mat-button mat-raised-button routerLink="/svaVozila" routerLinkActive="active" (click)="sva()">Novi oglas</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja Vozila</a>
+      <a mat-button mat-raised-button routerLink="/cenovnici" routerLinkActive="active" (click)="cenovnici()">Cenovnici</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
    
     </span>
