--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -18,6 +18,8 @@
   <span class="nav-tool-items">
     <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
     <a mat-button mat-raised-button routerLink="/svaVozila" routerLinkActive="active" (click)="sva()">Sva vozila</a>
+    <a mat-button mat-raised-button routerLink="/oglasi" routerLinkActive="active" (click)="sviMojiOglasi()">Svi oglasi</a>
+    <a mat-button mat-raised-button routerLink="/cenovnici" routerLinkActive="active" (click)="cenovnici()">Cenovnici</a>
     <a mat-button mat-raised-button routerLink="/zahteviMess" routerLinkActive="active" (click)="zahteviMess()">Poruke</a>
     <a mat-button mat-raised-button routerLink="/cart" routerLinkActive="active" (click)="shopCart()">Shopping Cart</a>
     <a mat-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
