--- a/ServisiFront/src/app/components/userComponent/cenovnici/cenovnici.component.html
+++ b/ServisiFront/src/app/components/userComponent/cenovnici/cenovnici.component.html
@@ -31,7 +31,7 @@
             <td>{{ cenovnik.dat | date}}</td>
             <td><button class="btn btn-info" (click)="izmenaCenovnika(cenovnik)">Izmeni</button></td>
             <td><button class="btn btn-danger" (click)="deleteCenovnik(cenovnik)">Brisanje</button></td>
-            <td><a mat-button (click)="openDialogOglas(vozilo.id)">
+            <td><a mat-button (click)="stavkeC(cenovnik.id)">
                   detaljnije
               </a></td>
           </tr>
