--- a/ServisiFront/src/app/components/userComponent/user/user.component.css
+++ b/ServisiFront/src/app/components/userComponent/user/user.component.css
@@ -90,3 +90,54 @@ md-grid-list.header {
       height: 100%;
       z-index: 9999;
   }
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: start;
+    background-color: rgb(255, 255, 255);
+  }
+  
+  .flex-container > .flex-item {
+    background-color: #fff8f8;
+    border: 1px solid rgb(129, 129, 129);
+    border-radius: 6px;
+    width: 45%;
+    padding: 10px;
+    margin: 10px;
+    text-align: left;
+    line-height: 75px;
+    font-size: 30px;
+    box-shadow: 2px 3px 3px 1px rgba(189, 189, 189, 0.94);
+  }
+  .flex-container > .flex-item p {
+      font-size: 14px;
+      padding: 0;
+      display:block; 
+      line-height: 1.1rem;
+      margin-block-start:2px;
+      margin-block-end:2px;
+      margin: 2px;
+    color:rgb(114, 114, 114);
+  }
+  .flex-container > .flex-item .title-section-left {
+    display: inline !important;
+      color:rgb(114, 114, 114);
+  }
+  .flex-container > .flex-item .title-section-right{
+    display: inline !important;
+    float: right;
+    margin-top: 1.2em !important;
+  }
+  .flex-container > .flex-item .footer-section-left {
+    display: inline !important;
+  }
+  .flex-container > .flex-item .footer-section-right{
+    display: inline !important;
+    float: right;
+    margin-top: 1.2em !important;
+    color:rgb(114, 114, 114);
+    margin-right: 1em !important;
+  }
+  .flex-container > .flex-item p span {
+    color:rgb(43, 26, 90);
+  }
