--- a/ServisiFront/src/app/components/userComponent/user/user.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/user.component.html
@@ -207,13 +207,13 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Predjeni kilometri:</mat-label>
-              <input [(ngModel)]="pomocniSearchModel.predjeniKilometri" matInput
+              <input [(ngModel)]="pomocniSearchModel.predjeniKilometri" type="number" matInput
                 placeholder="Unesite predjene kilometre">
               <mat-icon matSuffix>not_listed_location</mat-icon>
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Planirani kilometri:</mat-label>
-              <input [(ngModel)]="pomocniSearchModel.planiraniKilometri" matInput
+              <input [(ngModel)]="pomocniSearchModel.planiraniKilometri" type="number" matInput
                 placeholder="Unesite planirane kilometre">
               <mat-icon matSuffix>location_on</mat-icon>
             </mat-form-field>
